--- a/app/views/partials/main.jade
+++ b/app/views/partials/main.jade
@@ -9,7 +9,7 @@ div(ng-include='\'partials/navbar\'')
   p.lead
     <img src="images/yeoman.png" alt="I'm Yeoman">
     br
-    | Always a pleasure scaffolding your apps.
+    | Always a pleasure scaffolding your apps. Your email is {{currentUser.email}}
   p
     a.btn.btn-lg.btn-success(ng-href='#') Splendid!
     
