--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -51,6 +51,10 @@ html.no-js
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <!-- endbower -->
+    <script src="bower_components/cloudinary_js/js/jquery.cloudinary.js"></script>
+    <script src="bower_components/cloudinary_js/js/jquery.ui.widget.js"></script>
+    <script src="bower_components/cloudinary_js/js/jquery.iframe-transport.js"></script>
+    <script src="bower_components/cloudinary_js/js/jquery.fileupload.js"></script>
     <!-- endbuild -->
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
     <script src="scripts/app.js"></script>
@@ -65,3 +69,5 @@ html.no-js
     <script src="scripts/directives/mongooseError.js"></script>
     <!-- endbuild -->
     
+    script.
+      $.cloudinary.config({ cloud_name: 'kristile-com', api_key: '467799287163396'})
